# Spectrum-Analyzer

./: .gitmodules  README.md
PCB/v1/: pico.kicad_pcb  pico.kicad_prl  pico.kicad_sch
src/pico/: CMakeLists.txt
src/pico/pico_nrf/: CMakeLists.txt
src/pico/pico_nrf/src/: pico_nrf.cpp
src/python/: spectrum_analyzer.ui  spectrum_analyzer_gui.py  spectrum_analyzer_gui2.py
